<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>br.com.unipe</groupId>
		<artifactId>aid</artifactId>
		<version>1.0</version>
	</parent>
	<artifactId>aid.admin</artifactId>
	<packaging>war</packaging>

	<dependencies>
		<!-- JSF start -->
		<dependency>
			<groupId>com.sun.faces</groupId>
			<artifactId>jsf-api</artifactId>
		</dependency>
		<dependency>
			<groupId>com.sun.faces</groupId>
			<artifactId>jsf-impl</artifactId>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
		</dependency>
		<dependency>
			<groupId>javax.servlet.jsp</groupId>
			<artifactId>jsp-api</artifactId>
		</dependency>
		<!-- JSF end -->

		<!-- Weld start -->
		<dependency>
			<groupId>org.jboss.weld.servlet</groupId>
			<artifactId>weld-servlet</artifactId>
		</dependency>
		<!-- Weld end -->

		<!-- JUnit start -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- JUnit end -->

		<!-- QR Code start -->
		<dependency>
			<groupId>com.google.zxing</groupId>
			<artifactId>core</artifactId>
		</dependency>
		<!-- QR Code end -->

		<!-- JasperReport start -->
		<dependency>
			<groupId>jasperreports</groupId>
			<artifactId>jasperreports</artifactId>
		</dependency>
		<!-- JasperReport end -->

		<!-- Primefaces start -->
		<dependency>
			<groupId>org.primefaces</groupId>
			<artifactId>primefaces</artifactId>
		</dependency>
		<dependency>
			<groupId>org.primefaces.themes</groupId>
			<artifactId>home</artifactId>
		</dependency>
		<!-- Primefaces end -->

		<!-- Omnifaces start -->
		<dependency>
			<groupId>org.omnifaces</groupId>
			<artifactId>omnifaces</artifactId>
		</dependency>
		<!-- Omnifaces end -->

		<!-- aid.core begin -->
		<dependency>
			<groupId>br.com.unipe</groupId>
			<artifactId>aid.core</artifactId>
			<version>1.0</version>
		</dependency>
		<!-- aid.core end -->		
	</dependencies>

	<build>
		<plugins>
			<!-- <plugin> -->
			<!-- <groupId>org.apache.tomcat.maven</groupId> -->
			<!-- <artifactId>tomcat7-maven-plugin</artifactId> -->
			<!-- <version>2.2</version> -->
			<!-- <configuration> -->
			<!-- <path>/aid.admin</path> -->
			<!-- <port>9090</port> -->
			<!-- <contextReloadable>true</contextReloadable> -->
			<!-- <systemProperties> -->
			<!-- <JAVA_OPTS>-Xms256m -Xmx512m -XX:MaxPermSize=256m</JAVA_OPTS> -->
			<!-- </systemProperties> -->
			<!-- </configuration> -->
			<!-- </plugin> -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>